--- a/pom.xml
+++ b/pom.xml
@@ -18,11 +18,11 @@
     <description>Microservicios NRC 23316</description>
 
     <modules>
-        <module>me-eureka-server</module>
-        <module>publicaciones</module>
-        <module>sincronizacion</module>
-        <module>notificaciones</module>
-        <module>ms-catalogo</module>
+        <module>ms-eureka-server</module>
+        <module>ms-api-gateway</module>
+        <module>ms-careNotifier</module>
+        <module>ms-healthAnalyzer</module>
+        <module>ms-patientDataCollector</module>
         <module>ms-api-gateway</module>
     </modules>
 </project>
