--- a/bd/docker-compose.yml
+++ b/bd/docker-compose.yml
@@ -1,6 +1,7 @@
 version: '3.8'
 
 services:
+  # Microservicio 1 CareNotifier
   cockroach1:
     image: cockroachdb/cockroach:latest
     container_name: crdb-node1
@@ -11,7 +12,7 @@ services:
     volumes:
       - cockroach1:/cockroach/cockroach-data
     command: start-single-node --insecure --advertise-addr=crdb-node1
-
+  # Microservicio 2 HealthAnalyzer
   cockroach2:
     image: cockroachdb/cockroach:latest
     container_name: crdb-node2
@@ -22,7 +23,7 @@ services:
     volumes:
       - cockroach2:/cockroach/cockroach-data
     command: start --insecure --store=node2 --listen-addr=0.0.0.0:26257 --http-addr=0.0.0.0:8080 --join=crdb-node1:26257 --advertise-addr=crdb-node2
-
+  # Microservicio 3 PatientDataCollector
   cockroach3:
     image: cockroachdb/cockroach:latest
     container_name: crdb-node3
@@ -37,4 +38,4 @@ services:
 volumes:
   cockroach1:
   cockroach2:
-  cockroach3:  # Corregí el typo (antes decía "cockroach3")
+  cockroach3:
