--- a/ms-healthAnalyzer/src/main/resources/application.yaml
+++ b/ms-healthAnalyzer/src/main/resources/application.yaml
@@ -3,10 +3,10 @@ server:
 
 spring:
   application:
-    name: SERVICE-CATALOGO
+    name: ms-health-analyzer
 
   datasource:
-    url: jdbc:postgresql://localhost:26257/catalogos_db?user=root&password=
+    url: jdbc:postgresql://localhost:26257/health_db?user=root&password=
     username: root
     password:
   jpa:
