cambios de microservicio

--- a/ms-api-gateway/src/main/resources/application.yaml
+++ b/ms-api-gateway/src/main/resources/application.yaml
@@ -17,6 +17,12 @@ spring:
             - Path=/api/v1/health-analyzer/**
           filters:
             - StripPrefix=2
+        - id: patient-data-collector-route
+          uri: lb://ms-patient-data-collector
+          predicates:
+            - Path=/vital-signs/**
+          filters:
+              - StripPrefix=0
 
 eureka:
   client:
