--- a/ms-careNotifier/pom.xml
+++ b/ms-careNotifier/pom.xml
@@ -9,13 +9,13 @@
 		<relativePath/>
 	</parent>
 	<groupId>com.espe</groupId>
-	<artifactId>ms-catalogo</artifactId>
+	<artifactId>ms-care-notifier</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>ms-catalogo</name>
-	<description>Microservicio de Catálogo</description>
+	<name>ms-care-notifier</name>
+	<description>Microservicio para enviar notificaciones basadas en eventos críticos</description>
 	<properties>
 		<java.version>21</java.version>
-		<spring-cloud.version>2025.0.0</spring-cloud.version>
+		<spring-cloud.version>2023.0.3</spring-cloud.version>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -33,6 +33,7 @@
 		<dependency>
 			<groupId>org.postgresql</groupId>
 			<artifactId>postgresql</artifactId>
+			<version>42.7.3</version>
 			<scope>runtime</scope>
 		</dependency>
 		<dependency>
