--- a/bd/docker-compose.yml
+++ b/bd/docker-compose.yml
@@ -1,39 +1,54 @@
+version: "3.8"
 
 services:
   cockroach1:
     image: cockroachdb/cockroach:latest
     container_name: crdb-node1
-    hostname: crdb-node1  # Importante para el DNS interno
+    hostname: crdb-node1
     ports:
-      - "26257:26257"  # SQL (externo:26257 → interno:26257)
+      - "26257:26257"  # SQL
       - "8080:8080"    # UI
     volumes:
       - cockroach1:/cockroach/cockroach-data
-    command: start-single-node --insecure --advertise-addr=crdb-node1
+    command: start --insecure --store=node1 --listen-addr=0.0.0.0:26257 --http-addr=0.0.0.0:8080 --advertise-addr=crdb-node1 --join=crdb-node1:26257
+    networks:
+      - crdb-net
 
   cockroach2:
     image: cockroachdb/cockroach:latest
     container_name: crdb-node2
     hostname: crdb-node2
+    depends_on:
+      - cockroach1
     ports:
-      - "26258:26257"  # SQL (externo:26258 → interno:26257)
-      - "8081:8080"    # UI
+      - "26258:26257"
+      - "8081:8080"
     volumes:
       - cockroach2:/cockroach/cockroach-data
-    command: start --insecure --store=node2 --listen-addr=0.0.0.0:26257 --http-addr=0.0.0.0:8080 --join=crdb-node1:26257 --advertise-addr=crdb-node2
+    command: start --insecure --store=node2 --listen-addr=0.0.0.0:26257 --http-addr=0.0.0.0:8080 --advertise-addr=crdb-node2 --join=crdb-node1:26257
+    networks:
+      - crdb-net
 
   cockroach3:
     image: cockroachdb/cockroach:latest
     container_name: crdb-node3
     hostname: crdb-node3
+    depends_on:
+      - cockroach1
     ports:
-      - "26259:26257"  # SQL (externo:26259 → interno:26257)
-      - "8082:8080"    # UI
+      - "26259:26257"
+      - "8082:8080"
     volumes:
       - cockroach3:/cockroach/cockroach-data
-    command: start --insecure --store=node3 --listen-addr=0.0.0.0:26257 --http-addr=0.0.0.0:8080 --join=crdb-node1:26257 --advertise-addr=crdb-node3
+    command: start --insecure --store=node3 --listen-addr=0.0.0.0:26257 --http-addr=0.0.0.0:8080 --advertise-addr=crdb-node3 --join=crdb-node1:26257
+    networks:
+      - crdb-net
 
 volumes:
   cockroach1:
   cockroach2:
-  cockroach3:  # Corregí el typo (antes decía "cockroach3")
+  cockroach3:
+
+networks:
+  crdb-net:
+    driver: bridge
