--- a/ms-healthAnalyzer/pom.xml
+++ b/ms-healthAnalyzer/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>3.5.0</version>
+		<version>3.3.4</version> <!-- Cambia a 3.3.4 -->
 		<relativePath/>
 	</parent>
 	<groupId>com.espe</groupId>
